RESOLVED FIXED13783
REGRESSION (r21120): Frame resizers not repainted properly when dragged
https://bugs.webkit.org/show_bug.cgi?id=13783
Summary REGRESSION (r21120): Frame resizers not repainted properly when dragged
mitz
Reported 2007-05-18 16:29:03 PDT
On any frameset page, dragging the frame resizers makes them disappear or be replaced with junk.
Attachments
RepaintDuringLayoutIfNeeded (1.55 KB, patch)
2007-05-19 01:15 PDT, mitz
hyatt: review+
mitz
Comment 1 2007-05-18 16:35:23 PDT
Must have been caused by removing repaintObjectsBeforeLayout() :-(
mitz
Comment 2 2007-05-19 01:15:40 PDT
Created attachment 14621 [details] RepaintDuringLayoutIfNeeded Actually wrote a patch that carefully repainted only the resizers before I realized it was pointless :)
Dave Hyatt
Comment 3 2007-05-19 01:18:35 PDT
Comment on attachment 14621 [details] RepaintDuringLayoutIfNeeded Heh. r=me.
Mark Rowe (bdash)
Comment 4 2007-05-19 16:34:59 PDT
Landed in r21603.
Note You need to log in before you can comment on or make changes to this bug.