2007-05-19  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13783
          REGRESSION (r21120): Frame resizers not repainted properly when dragged

        * rendering/RenderFrameSet.cpp:
        (WebCore::RenderFrameSet::layout):


Canonical link: https://commits.webkit.org/18031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21603 268f45cc-cd09-0410-ab3c-d52691b4dbfc