WebCore/rendering/RenderFrameSet.cpp
@@ -455,6 +455,11 @@ void RenderFrameSet::layout()
 {
     ASSERT(needsLayout());
 
+    bool doFullRepaint = selfNeedsLayout() && checkForRepaintDuringLayout();
+    IntRect oldBounds;
+    if (doFullRepaint)
+        oldBounds = absoluteClippedOverflowRect();
+
     if (!parent()->isFrameSet()) {
         FrameView* v = view()->frameView();
         m_width = v->visibleWidth();
@@ -478,6 +483,13 @@ void RenderFrameSet::layout()
     RenderContainer::layout();
 
     computeEdgeInfo();
+
+    if (doFullRepaint) {
+        view()->repaintViewRectangle(oldBounds);
+        IntRect newBounds = absoluteClippedOverflowRect();
+        if (newBounds != oldBounds)
+            view()->repaintViewRectangle(newBounds);
+    }
 
     setNeedsLayout(false);
 }
